# Inventive_Step_ADM

./: .coverage  .gitignore  MainClasses.py  OUTPUT_21_01.TXT  OUTPUT_21_01_02.TXT  OUTPUT_21_01_03.TXT  OUTPUT_21_01_04.TXT  OUTPUT_21_01_05.TXT  OUTPUT_21_01_06.TXT  UI.py  adm_case_manager.html  adm_dashboard.html  inventive_step_ADM.py  main.py  output.txt  output_20_01.txt  output_NEW.txt  output_decent.txt  output_dumb.txt  output_hmm.txt  output_new.txt  output_old.txt  output_text.txt  pyproject.toml  report_1.txt  report_2.txt  report_3.txt  report_4.txt  report_5.txt  requirements.txt
ADM/: .coverage  ADM_Construction.py  UI.py  adm_case_manager.html  batched_hybrid_system copy.py  batched_hybrid_system.py  build_vdb.py  calc_f1.py  check_qs.py  critique.py  hybrid_patent_system.py  hybrid_patent_system_old.py  hybrid_scratch.py  interactive_viz.py  interactive_viz_2.py  interactive_viz_tool.py  inventive_step_ADM copy.py  inventive_step_ADM.py  inventive_step_ADM_change.py  lenient_questions.json  new_UI.py  new_inventive_step_ADM.py  output.txt  output_com_1_tool_test.txt  output_results.txt  output_valid_1.txt  output_valid_3.txt  questions.json  results_comvik_baseline_config1.json  results_comvik_baseline_config2.json  results_comvik_tool_config1.json  results_validation_baseline_config1.json  results_validation_baseline_config2.json  results_validation_baseline_config3.json  results_validation_tool_config1.json  strict_questions.json  test.py  test_ADM.py  test_adm_me.py  test_adm_unit.py
Analysis/: ADM_viz.ipynb  llm_results.ipynb  llm_train_results.html  (+1 more)
(+151 files in other folders)
