[project]
name = "adm-jurix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.8.3",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "pydot>=4.0.1",
    "pythonds>=1.2.1",
    "vllm>=0.19.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
